--- a/app/index.jade
+++ b/app/index.jade
@@ -8,3 +8,8 @@ html
     title Best Reviews
   body
     h1 Hello World!
+
+    script(type='text/javascript' src='vendor/jquery/dist/jquery.js')
+    script(type='text/javascript' src='vendor/lodash/lodash.js')
+    script(type='text/javascript' src='vendor/angular/angular.js')
+    script(type='text/javascript' src='scripts/main.js')
