--- a/app/index.jade
+++ b/app/index.jade
@@ -5,7 +5,7 @@ html
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     link(rel='stylesheet' href='css/style.css' type='text/css')
-    title Full Contact
+    title Template
   body
     .container
       h1 Hello World!
