--- a/app/index.jade
+++ b/app/index.jade
@@ -28,6 +28,7 @@ html
       
     script(src='vendor/jquery/dist/jquery.js')
     script(src='vendor/lodash/lodash.js')
+    script(src='vendor/firebase/firebase.js')
     script(src='vendor/angular/angular.js')
     script(src='vendor/angular-ui-router/release/angular-ui-router.js')
     script(src='index.js')
