correcting file structure and build process

--- a/app/index.jade
+++ b/app/index.jade
@@ -19,7 +19,7 @@ html
              span.icon-bar
              span.icon-bar
              span.icon-bar
-           a.navbar-brand(ui-sref='home') Stalker
+           a.navbar-brand(ui-sref='home') Template
          #navbar.collapse.navbar-collapse
            ul.nav.navbar-nav.navbar-right
              li: a(ui-sref='home'): i.fa.fa-home &nbsp; Home
