setting up basic structure and content

--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -1,11 +1,4 @@
 .container-fluid
   .row
-    h3.h3-home.col-md-9 write some text...
-  .row
-    h2.h2-home.col-md-9 while you still can
-  .row
-    .col-md-9
-      button.btn.btn-success.btn-lg.btn-home Get Started
+    h3.h3-home.col-md-9 Up and Go BBQ
   
-  video(loop='' poster='' autoplay='')
-    source(src='images/travelMontage.mp4' type='video/mp4')
