--- a/app/index.jade
+++ b/app/index.jade
@@ -6,8 +6,8 @@ html
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     link(rel='stylesheet' href='vendor/font-awesome/css/font-awesome.min.css')
     link(rel='stylesheet' href='index.css' type='text/css')
-    title Template
-  body(ng-app='tempApp')
+    title Up and Go BBQ
+  body(ng-app='bbqApp')
     .container
       nav.navbar.navbar-default
        .container-fluid
@@ -21,7 +21,8 @@ html
          #navbar.collapse.navbar-collapse
            ul.nav.navbar-nav.navbar-right
              li: a(ui-sref='home'): i.fa.fa-home &nbsp; Home
-             li: a(ui-sref='login'): i.fa.fa-bolt &nbsp; Login
+             li: a(ui-sref='menu'): i.fa.fa-bolt &nbsp; Menu
+             li: a(ui-sref='contact'): i.fa.fa-bolt &nbsp; Contact
   
   div(ui-view)
 
