add in a schedule view

--- a/app/index.jade
+++ b/app/index.jade
@@ -17,11 +17,12 @@ html
              span.icon-bar
              span.icon-bar
              span.icon-bar
-           a.navbar-brand(ui-sref='home') Template
+           a.navbar-brand(ui-sref='home') Up and Go BBQ
          #navbar.collapse.navbar-collapse
            ul.nav.navbar-nav.navbar-right
              li: a(ui-sref='home'): i.fa.fa-home &nbsp; Home
              li: a(ui-sref='menu'): i.fa.fa-bolt &nbsp; Menu
+             li: a(ui-sref='schedule'): i.fa.fa-bolt &nbsp; Schedule
              li: a(ui-sref='contact'): i.fa.fa-bolt &nbsp; Contact
   
   div(ui-view)
