--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,21 @@
 
 <div id="home-view" class="container-fluid">
-  <div class="row">
-    <h3 class="h3-home col-md-9">Up and Go BBQ</h3>
+  <div id="home-div-main" class="row">
+    <div class="col-md-9">
+      <h2>Up and Go BBQ</h2>
+      <h3>313 is 220</h3>
+    </div>
+  </div>
+  <div class="row home-info">
+    <div class="col-xs-6"><img src="images/open_fire.jpg" alt="Open Fire" width="300" height="300"></div>
+    <div class="col-xs-6">
+      <p>Cooked over an open fire</p>
+    </div>
+  </div>
+  <div class="row home-info">
+    <p>some content here</p>
+  </div>
+  <div class="row home-info">
+    <p>some content here</p>
   </div>
 </div>
