--- a/public/views/schedule.html
+++ b/public/views/schedule.html
@@ -1,9 +1,38 @@
 
-<div class="container-fluid">
-  <div class="row">
+<div id="schedule-view" class="container-fluid">
+  <div id="schedule-div-main" class="row">
     <h2>located at the corner of Nolensville and Harding Place</h2>
     <h2>Monday - Saturday </h2>
     <h2>11am - 3pm</h2>
     <h3>For the most up to date schedule, call or text 615.818.6656 </h3>
+  </div>
+  <div class="row">
+    <form>
+      <h1>Contact form</h1>
+      <div class="form-group">
+        <label control-label class="col-sm-2">Name</label>
+        <div class="col-sm-10">
+          <input id="name" placeholder="bob smith" type="test" name="name" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label control-label class="col-sm-2">Email</label>
+        <div class="col-sm-10">
+          <input id="email" placeholder="bob@aol.com" type="email" name="email" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label control-label class="col-sm-2">Phone</label>
+        <div class="col-sm-10">
+          <input id="phone" placeholder="867.5309" name="phone" class="form-control">
+        </div>
+      </div>
+      <div class="form-group">
+        <label control-label class="col-sm-2">Message</label>
+        <div class="col-sm-10">
+          <textarea id="message" placeholder="send me some awesomeness" name="message" class="form-control"></textarea>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
