--- a/app/index.scss
+++ b/app/index.scss
@@ -1,30 +1,64 @@
 @import '../public/vendor/bootstrap-sass/assets/stylesheets/_bootstrap.scss';
+@import url(http://fonts.googleapis.com/css?family=Russo+One);
 
-h1 {
-  color: blue;
+/////////////////////////////// SCHEDULE VIEW ///////////////////////////////////
+
+#schedule-view {
+
+  #schedule-div-main {
+    background-image: url('images/vaughan_with_sign.jpg');
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    height: 100%;
+    color: white;
+    padding: 25% 5%;
+  }
 }
 
-///////////////////////////////HOME VIEW///////////////////////////////////
+
+/////////////////////////////// HOME VIEW ///////////////////////////////////
 
 #home-view {
-  padding-top: 80px;
-  margin: 3% 0;
-  height: 100%;
-  background-image: url('images/pit_both_sides_open.jpg');
-  background-position: center;
-  background-size: cover;
   text-align: center;
-  position: relative;
   color: white;
+  margin: 0;
+  font-family: 'Russo One', sans-serif;
 
-  .h3-home {
-    font-size: 10rem;
-    text-align: center;
+  #home-div-main {
+    padding: 15% 0 20%;
+    background-image: url('images/pit_both_sides_open.jpg');
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    height: 100%;
+
+    h2 {
+      font-size: 10rem;
+    }
+
+    h3 {
+      font-size: 5rem;
+    }
   }
+
+  .home-info {
+    background-color: blue;
+    padding: 1% 0;
+  }
+
 
 }
 
-/////////////////////////HTML FORM/////////////////////////////
+
+/////////////////////////////// NAV ///////////////////////////////////
+
+.navbar {
+  height: 100%;
+  margin: 0;
+}
+
+///////////////////////// HTML FORM /////////////////////////////
 form {
   input {
     background-color: #edefed;
@@ -40,18 +74,6 @@ form {
   }
 }
   ///////////////////////////////HTML///////////////////////////////////
-
-video {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: -100;
-  background-size: cover;
-}
 
 body {
   background-color: #edefed;
