--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -1,4 +1,16 @@
 #home-view.container-fluid
-  .row
-    h3.h3-home.col-md-9 Up and Go BBQ
+  #home-div-main.row
+    .col-md-9
+      h2 Up and Go BBQ
+      h3 313 is 220
+  .row.home-info
+    .col-xs-6
+      img(src="images/open_fire.jpg" alt='Open Fire' width='300' height='300')
+    .col-xs-6
+      p Cooked over an open fire
+  .row.home-info
+    p some content here
+  .row.home-info
+    p some content here
+    
   
