--- a/app/views/schedule.jade
+++ b/app/views/schedule.jade
@@ -1,6 +1,25 @@
-.container-fluid
-  .row
+#schedule-view.container-fluid
+  #schedule-div-main.row
     h2 located at the corner of Nolensville and Harding Place
     h2 Monday - Saturday 
     h2 11am - 3pm
     h3 For the most up to date schedule, call or text 615.818.6656 
+  .row
+    form
+      h1 Contact form
+      .form-group
+        label.col-sm-2(control-label) Name
+        .col-sm-10
+          input#name.form-control(placeholder='bob smith' type='test' name='name')
+      .form-group
+        label.col-sm-2(control-label) Email
+        .col-sm-10
+          input#email.form-control(placeholder='bob@aol.com' type='email' name='email')
+      .form-group
+        label.col-sm-2(control-label) Phone
+        .col-sm-10
+          input#phone.form-control(placeholder="867.5309" name='phone')  
+      .form-group
+        label.col-sm-2(control-label) Message
+        .col-sm-10
+          textarea#message.form-control(placeholder="send me some awesomeness" name='message')
