switching out content in schedule and contact views

--- a/app/index.scss
+++ b/app/index.scss
@@ -1,12 +1,12 @@
 @import '../public/vendor/bootstrap-sass/assets/stylesheets/_bootstrap.scss';
 @import url(http://fonts.googleapis.com/css?family=Russo+One);
 
-/////////////////////////////// SCHEDULE VIEW ///////////////////////////////////
+/////////////////////////////// CONTACT VIEW ///////////////////////////////////
 
-#schedule-view {
+#contact-view {
   text-align: center;
 
-  #schedule-div-main {
+  #contact-div-main {
     img {
       margin: 5% 0;
     }
