--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -1,15 +1,47 @@
 
-<div class="container-fluid">
-  <div class="row">
-    <h1>Contact</h1>
-    <h2>Vaughan Johnson</h2>
-    <h3>615.818.6656</h3>
-    <h3>615.596.6544</h3>
-    <h4>facebook</h4>
-    <h4>instagram</h4>
-    <h4>upandgobbq@outlook.com</h4>
-  </div>
-  <div class="row">
-    <h2>contact form</h2>
+<div id="contact-view" class="container-fluid">
+  <div id="contact-div-main" class="row">
+    <div class="col-sm-6"><img src="images/vaughan_with_sign.jpg" alt="Vaughan with Sign"></div>
+    <div class="col-sm-6">
+      <div class="row">
+        <h3>615.818.6656</h3>
+        <h3>615.596.6544</h3>
+        <h4>facebook</h4>
+        <h4>instagram</h4>
+        <h4>upandgobbq@outlook.com</h4>
+      </div>
+      <div class="row">
+        <form>
+          <h1>Send Vaughan a Message</h1>
+          <div class="form-group">
+            <label control-label class="col-sm-2">Name</label>
+            <div class="col-sm-9">
+              <input id="name" placeholder="bob smith" type="test" name="name" class="form-control">
+            </div>
+          </div>
+          <div class="form-group">
+            <label control-label class="col-sm-2">Email</label>
+            <div class="col-sm-9">
+              <input id="email" placeholder="bob@aol.com" type="email" name="email" class="form-control">
+            </div>
+          </div>
+          <div class="form-group">
+            <label control-label class="col-sm-2">Phone</label>
+            <div class="col-sm-9">
+              <input id="phone" placeholder="867.5309" name="phone" class="form-control">
+            </div>
+          </div>
+          <div class="form-group">
+            <label control-label class="col-sm-2">Message</label>
+            <div class="col-sm-9">
+              <textarea id="message" placeholder="send me some awesomeness" name="message" class="form-control"></textarea>
+            </div>
+          </div>
+          <div class="form-group">
+            <button class="btn btn-success">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
