--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -5,12 +5,18 @@
       h3 313 is 220
   .row.home-info
     .col-xs-6
-      img(src="images/open_fire.jpg" alt='Open Fire' width='300' height='300')
+      img.img-rounded(src="images/vaughan_with_grill.jpg" alt='Vaughan with Grill' width='400' height='300')
     .col-xs-6
-      p Cooked over an open fire
+      h1 Vaughan cooks it up...
   .row.home-info
-    p some content here
+    .col-xs-6
+      h1 over an open flame...
+    .col-xs-6
+      img.img-rounded(src="images/open_fire.jpg" alt='Open Fire' width='400' height='300')
   .row.home-info
-    p some content here
-    
+    .col-xs-6
+      img.img-rounded(src="images/happy_customers.jpg" alt='Happy Customers' width='400' height='300')
+    .col-xs-6
+      h1 and serves it up fresh for you!
+
   
