--- a/public/views/home.html
+++ b/public/views/home.html
@@ -7,15 +7,21 @@
     </div>
   </div>
   <div class="row home-info">
-    <div class="col-xs-6"><img src="images/open_fire.jpg" alt="Open Fire" width="300" height="300"></div>
+    <div class="col-xs-6"><img src="images/vaughan_with_grill.jpg" alt="Vaughan with Grill" width="400" height="300" class="img-rounded"></div>
     <div class="col-xs-6">
-      <p>Cooked over an open fire</p>
+      <h1>Vaughan cooks it up...</h1>
     </div>
   </div>
   <div class="row home-info">
-    <p>some content here</p>
+    <div class="col-xs-6">
+      <h1>over an open flame...</h1>
+    </div>
+    <div class="col-xs-6"><img src="images/open_fire.jpg" alt="Open Fire" width="400" height="300" class="img-rounded"></div>
   </div>
   <div class="row home-info">
-    <p>some content here</p>
+    <div class="col-xs-6"><img src="images/happy_customers.jpg" alt="Happy Customers" width="400" height="300" class="img-rounded"></div>
+    <div class="col-xs-6">
+      <h1>and serves it up fresh for you!</h1>
+    </div>
   </div>
 </div>
