--- a/app/views/contact.jade
+++ b/app/views/contact.jade
@@ -4,11 +4,11 @@
       img(src="images/vaughan_with_sign.jpg" alt='Vaughan with Sign')
     .col-sm-6
       .row
-        h3 615.818.6656
-        h3 615.596.6544
-        h4 facebook
-        h4 instagram
-        h4 upandgobbq@outlook.com
+        h2: i.fa.fa-mobile &nbsp; 615.818.6656
+        h2: i.fa.fa-phone &nbsp; 615.596.6544
+        h3: i.fa.fa-facebook-official &nbsp; facebook
+        h3: i.fa.fa-instagram &nbsp; instagram
+        h3: i.fa.fa-envelope-o &nbsp; upandgobbq@outlook.com
       .row
         form
           h1 Send Vaughan a Message
