--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -4,11 +4,11 @@
     <div class="col-sm-6"><img src="images/vaughan_with_sign.jpg" alt="Vaughan with Sign"></div>
     <div class="col-sm-6">
       <div class="row">
-        <h3>615.818.6656</h3>
-        <h3>615.596.6544</h3>
-        <h4>facebook</h4>
-        <h4>instagram</h4>
-        <h4>upandgobbq@outlook.com</h4>
+        <h2><i class="fa fa-mobile">&nbsp; 615.818.6656</i></h2>
+        <h2><i class="fa fa-phone">&nbsp; 615.596.6544</i></h2>
+        <h3><i class="fa fa-facebook-official">&nbsp; facebook</i></h3>
+        <h3><i class="fa fa-instagram">&nbsp; instagram</i></h3>
+        <h3><i class="fa fa-envelope-o">&nbsp; upandgobbq@outlook.com</i></h3>
       </div>
       <div class="row">
         <form>
