--- a/public/index.css
+++ b/public/index.css
@@ -4904,6 +4904,24 @@ button.close {
   .hidden-print {
     display: none !important; } }
 
+#menu-view {
+  text-align: center;
+  font-family: 'Russo One', sans-serif; }
+  #menu-view h1 {
+    font-size: 10rem;
+    padding: 2%; }
+  #menu-view h2 {
+    font-size: 5rem; }
+  #menu-view .menu-list {
+    background-color: rgba(0, 0, 0, 0.4); }
+  #menu-view .menu-item {
+    margin: 2%;
+    padding: 2%; }
+  #menu-view h3 {
+    display: inline-block;
+    padding: 2%;
+    font-size: 3rem; }
+
 #contact-view {
   text-align: center; }
   #contact-view #contact-div-main img {
