--- a/public/views/menu.html
+++ b/public/views/menu.html
@@ -1,18 +1,66 @@
 
-<div class="container-fluid">
+<div id="menu-view" class="container-fluid">
   <div class="row">
-    <h1>Menu</h1>
-    <ul>
-      <li>Ribs</li>
-      <li>Chicken</li>
-      <li>Pulled Pork</li>
-      <li>Fish</li>
-      <li>Drinks</li>
-      <li>Hamburger</li>
-      <li>Sausage</li>
-      <li>Bologna</li>
-      <li>Chips</li>
-      <li>Side Varies (Day-to-Day)</li>
-    </ul>
+    <h1>MENU</h1>
+  </div>
+  <div class="row menu-list">
+    <h2>Served Daily</h2>
+    <div class="row">
+      <h3>Ribs</h3>
+      <h3>Chicken</h3>
+      <h3>Pulled Pork</h3>
+      <h3>Fish</h3>
+      <h3>Hamburger</h3>
+      <h3>Sausage</h3>
+      <h3>Bologna</h3>
+    </div>
+    <div class="row">
+      <h2>Extras</h2>
+    </div>
+    <div class="row">
+      <h3>Sides (Vary Day-to-Day)</h3>
+      <h3>Drinks</h3>
+      <h3>Chips</h3>
+    </div>
+  </div>
+  <div class="row menu-item">
+    <div class="col-xs-4">
+      <div class="row"><img src="images/ribs.jpg" alt="Rack of Ribs" width="400" height="300" class="img-circle"></div>
+      <div class="row">
+        <h3>Rack of Ribs  </h3>
+      </div>
+    </div>
+    <div class="col-xs-4">
+      <div class="row"><img src="images/rib_sandwich.jpg" alt="Rib Sandwich" width="400" height="300" class="img-circle"></div>
+      <div class="row">
+        <h3>Rib Sandwich</h3>
+      </div>
+    </div>
+    <div class="col-xs-4">
+      <div class="row"><img src="images/fried_fish.jpg" alt="Fried Fish" width="400" height="300" class="img-circle"></div>
+      <div class="row">
+        <h3>Fresh Fried Fish</h3>
+      </div>
+    </div>
+  </div>
+  <div class="row menu-item">
+    <div class="col-xs-4">
+      <div class="row"><img src="images/macaroni_salad.jpg" alt="Macaroni Salad" width="300" height="400" class="img-circle"></div>
+      <div class="row">
+        <h3>Macaroni Salad</h3>
+      </div>
+    </div>
+    <div class="col-xs-4">
+      <div class="row"><img src="images/fish_plate.jpg" alt="Fish Plate" width="300" height="400" class="img-circle"></div>
+      <div class="row">
+        <h3>Fish Sandwich and Slaw</h3>
+      </div>
+    </div>
+    <div class="col-xs-4">
+      <div class="row"><img src="images/burger.jpg" alt="Burger" width="300" height="400" class="img-circle"></div>
+      <div class="row">
+        <h3>Burgers</h3>
+      </div>
+    </div>
   </div>
 </div>
