--- a/app/index.jade
+++ b/app/index.jade
@@ -18,7 +18,7 @@ html
              span.icon-bar
              span.icon-bar
              span.icon-bar
-           a.navbar-brand(ui-sref='home') Up and Go BBQ
+           a.navbar-brand(ui-sref='home'): i.fa.fa-heart-o &nbsp; Up and Go BBQ
          #navbar.collapse.navbar-collapse
            ul.nav.navbar-nav.navbar-right
              li: a(ui-sref='home'): i.fa.fa-home &nbsp; Home
