--- a/public/views/schedule.html
+++ b/public/views/schedule.html
@@ -1,7 +1,16 @@
 
 <div id="schedule-view" class="container-fluid">
-  <h2>Come see Vaughan at the corner of Nolensville and Harding Place</h2>
-  <h2>Monday - Saturday </h2>
-  <h2>11am - 3pm</h2>
-  <h3>For the most up to date schedule, call or text 615.818.6656 </h3>
+  <div class="row">
+    <h1>Location & Schedule</h1>
+  </div>
+  <div class="row schedule-list">
+    <h2>Come see Vaughan </h2>
+    <h2>Convenienty located at the corner of Nolensville and Harding Place</h2>
+    <h3>Easily accessible in the old Kmart parking lot behind Hardee's</h3>
+  </div>
+  <div class="row">
+    <h2>Monday - Saturday </h2>
+    <h2>11am - 3pm</h2>
+    <h3>For the most up to date schedule, call or text 615.818.6656 </h3>
+  </div>
 </div>
