--- a/app/index.jade
+++ b/app/index.jade
@@ -23,7 +23,7 @@ html
            ul.nav.navbar-nav.navbar-right
              li: a(ui-sref='home'): i.fa.fa-home &nbsp; Home
              li: a(ui-sref='menu'): i.fa.fa-cutlery &nbsp; Menu
-             li: a(ui-sref='schedule'): i.fa.fa-map-marker &nbsp; Schedule
+             li: a(ui-sref='schedule'): i.fa.fa-map-marker &nbsp; Location
              li: a(ui-sref='contact'): i.fa.fa-envelope-o &nbsp; Contact
   
   div(ui-view)
