--- a/app/views/schedule.jade
+++ b/app/views/schedule.jade
@@ -1,5 +1,11 @@
 #schedule-view.container-fluid
-  h2 Come see Vaughan at the corner of Nolensville and Harding Place
-  h2 Monday - Saturday 
-  h2 11am - 3pm
-  h3 For the most up to date schedule, call or text 615.818.6656 
+  .row
+    h1 Location & Schedule
+  .row.schedule-list
+    h2 Come see Vaughan 
+    h2 Convenienty located at the corner of Nolensville and Harding Place
+    h3 Easily accessible in the old Kmart parking lot behind Hardee's
+  .row
+    h2 Monday - Saturday 
+    h2 11am - 3pm
+    h3 For the most up to date schedule, call or text 615.818.6656 
