user experience for mobile view

--- a/app/index.jade
+++ b/app/index.jade
@@ -9,7 +9,7 @@ html
     link(rel='shortcut icon' type='image/x-icon' href='images/favicon.ico')
     title Up and Go BBQ
   body(ng-app='bbqApp')
-    .nav-container
+    .nav-container.navbar-fixed-top
       nav.navbar.navbar-inverse
        .container-fluid
          .navbar-header
@@ -23,7 +23,7 @@ html
            ul.nav.navbar-nav.navbar-right
              li: a(ui-sref='home'): i.fa.fa-home &nbsp; Home
              li: a(ui-sref='menu'): i.fa.fa-cutlery &nbsp; Menu
-             li: a(ui-sref='schedule'): i.fa.fa-map-marker &nbsp; Location
+             li: a(ui-sref='schedule'): i.fa.fa-map-marker &nbsp; Find Vaughan
              li: a(ui-sref='contact'): i.fa.fa-envelope-o &nbsp; Contact
   
   div(ui-view)
