--- a/app/views/contact.jade
+++ b/app/views/contact.jade
@@ -1,12 +1,12 @@
 #contact-view.container-fluid
   #contact-div-main.row
-    .col-sm-6
-      img(src="images/vaughan_with_sign.jpg" alt='Vaughan with Sign')
-    .col-sm-6
+    .col-md-6
+      img.img-rounded(src="images/vaughan_with_sign.jpg" alt='Vaughan with Sign')
+    .col-md-6
       .row
         h2: i.fa.fa-mobile &nbsp; 615.818.6656
         h2: i.fa.fa-phone &nbsp; 615.596.6544
-        h3: i.fa.fa-facebook-official &nbsp; facebook
+        h3: a(href='https://www.facebook.com/profile.php?id=100009129488626'): i.fa.fa-facebook-official &nbsp; facebook
         h3: i.fa.fa-instagram &nbsp; instagram
         h3: i.fa.fa-envelope-o &nbsp; upandgobbq@outlook.com
       .row
