--- a/app/views/menu.jade
+++ b/app/views/menu.jade
@@ -18,33 +18,33 @@
       h3 Drinks
       h3 Chips
   .row.menu-item
-    .col-xs-4
+    .col-md-4
       .row
         img.img-circle(src="images/ribs.jpg" alt='Rack of Ribs' width='400' height='300')
       .row
         h3 Rack of Ribs  
-    .col-xs-4
+    .col-md-4
       .row
         img.img-circle(src="images/rib_sandwich.jpg" alt='Rib Sandwich' width='400' height='300')
       .row
         h3 Rib Sandwich
-    .col-xs-4
+    .col-md-4
       .row
         img.img-circle(src="images/fried_fish.jpg" alt='Fried Fish' width='400' height='300')
       .row
         h3 Fresh Fried Fish
   .row.menu-item
-    .col-xs-4
+    .col-md-4
       .row
         img.img-circle(src="images/macaroni_salad.jpg" alt='Macaroni Salad' width='300' height='400')
       .row
         h3 Macaroni Salad
-    .col-xs-4
+    .col-md-4
       .row
         img.img-circle(src="images/fish_plate.jpg" alt='Fish Plate' width='300' height='400')
       .row
         h3 Fish Sandwich and Slaw
-    .col-xs-4
+    .col-md-4
       .row
         img.img-circle(src="images/burger.jpg" alt='Burger' width='300' height='400')
       .row
