--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -1,12 +1,12 @@
 
 <div id="contact-view" class="container-fluid">
   <div id="contact-div-main" class="row">
-    <div class="col-sm-6"><img src="images/vaughan_with_sign.jpg" alt="Vaughan with Sign"></div>
-    <div class="col-sm-6">
+    <div class="col-md-6"><img src="images/vaughan_with_sign.jpg" alt="Vaughan with Sign" class="img-rounded"></div>
+    <div class="col-md-6">
       <div class="row">
         <h2><i class="fa fa-mobile">&nbsp; 615.818.6656</i></h2>
         <h2><i class="fa fa-phone">&nbsp; 615.596.6544</i></h2>
-        <h3><i class="fa fa-facebook-official">&nbsp; facebook</i></h3>
+        <h3><a href="https://www.facebook.com/profile.php?id=100009129488626"><i class="fa fa-facebook-official">&nbsp; facebook</i></a></h3>
         <h3><i class="fa fa-instagram">&nbsp; instagram</i></h3>
         <h3><i class="fa fa-envelope-o">&nbsp; upandgobbq@outlook.com</i></h3>
       </div>
