--- a/public/views/home.html
+++ b/public/views/home.html
@@ -5,7 +5,7 @@
     <h3>313 is 220</h3>
   </div>
   <div class="row home-info">
-    <div class="col-xs-6"><img src="images/vaughan_with_grill.jpg" alt="Vaughan with Grill" width="400" height="300" class="img-rounded"></div>
+    <div class="col-xs-6"><img src="images/vaughan_with_grill.jpg" alt="Vaughan with Grill" width="400" height="300" class="img-rounded img-responsive"></div>
     <div class="col-xs-6">
       <h1>Vaughan cooks it up...</h1>
     </div>
@@ -14,10 +14,10 @@
     <div class="col-xs-6">
       <h1>over an open flame...</h1>
     </div>
-    <div class="col-xs-6"><img src="images/open_fire.jpg" alt="Open Fire" width="400" height="300" class="img-rounded"></div>
+    <div class="col-xs-6"><img src="images/open_fire.jpg" alt="Open Fire" width="400" height="300" class="img-rounded img-responsive"></div>
   </div>
   <div class="row home-info">
-    <div class="col-xs-6"><img src="images/happy_customers.jpg" alt="Happy Customers" width="400" height="300" class="img-rounded"></div>
+    <div class="col-xs-6"><img src="images/happy_customers.jpg" alt="Happy Customers" width="400" height="300" class="img-rounded img-responsive"></div>
     <div class="col-xs-6">
       <h1>and serves it up fresh for you!</h1>
     </div>
