--- a/public/views/menu.html
+++ b/public/views/menu.html
@@ -24,19 +24,19 @@
     </div>
   </div>
   <div class="row menu-item">
-    <div class="col-xs-4">
+    <div class="col-md-4">
       <div class="row"><img src="images/ribs.jpg" alt="Rack of Ribs" width="400" height="300" class="img-circle"></div>
       <div class="row">
         <h3>Rack of Ribs  </h3>
       </div>
     </div>
-    <div class="col-xs-4">
+    <div class="col-md-4">
       <div class="row"><img src="images/rib_sandwich.jpg" alt="Rib Sandwich" width="400" height="300" class="img-circle"></div>
       <div class="row">
         <h3>Rib Sandwich</h3>
       </div>
     </div>
-    <div class="col-xs-4">
+    <div class="col-md-4">
       <div class="row"><img src="images/fried_fish.jpg" alt="Fried Fish" width="400" height="300" class="img-circle"></div>
       <div class="row">
         <h3>Fresh Fried Fish</h3>
@@ -44,19 +44,19 @@
     </div>
   </div>
   <div class="row menu-item">
-    <div class="col-xs-4">
+    <div class="col-md-4">
       <div class="row"><img src="images/macaroni_salad.jpg" alt="Macaroni Salad" width="300" height="400" class="img-circle"></div>
       <div class="row">
         <h3>Macaroni Salad</h3>
       </div>
     </div>
-    <div class="col-xs-4">
+    <div class="col-md-4">
       <div class="row"><img src="images/fish_plate.jpg" alt="Fish Plate" width="300" height="400" class="img-circle"></div>
       <div class="row">
         <h3>Fish Sandwich and Slaw</h3>
       </div>
     </div>
-    <div class="col-xs-4">
+    <div class="col-md-4">
       <div class="row"><img src="images/burger.jpg" alt="Burger" width="300" height="400" class="img-circle"></div>
       <div class="row">
         <h3>Burgers</h3>
