add content to main div home page, change hours on schedule, updated placeholders on contact form

--- a/app/views/contact.jade
+++ b/app/views/contact.jade
@@ -15,18 +15,18 @@
           .form-group
             label.col-sm-2(control-label) Name
             .col-sm-9
-              input#name.form-control(placeholder='bob smith' type='test' name='name')
+              input#name.form-control(placeholder='your name' type='test' name='name')
           .form-group
             label.col-sm-2(control-label) Email
             .col-sm-9
-              input#email.form-control(placeholder='bob@aol.com' type='email' name='email')
+              input#email.form-control(placeholder='bob@ilovebbq.com' type='email' name='email')
           .form-group
             label.col-sm-2(control-label) Phone
             .col-sm-9
-              input#phone.form-control(placeholder="867.5309" name='phone')  
+              input#phone.form-control(placeholder="your number" name='phone')  
           .form-group
             label.col-sm-2(control-label) Message
             .col-sm-9
-              textarea#message.form-control(placeholder="send me some awesomeness" name='message')
+              textarea#message.form-control(placeholder="Talk to me. Tell me what you think..." name='message')
           .form-group
             button.btn.btn-success Submit
