--- a/public/views/schedule.html
+++ b/public/views/schedule.html
@@ -4,13 +4,17 @@
     <h1>Location & Schedule</h1>
   </div>
   <div class="row schedule-list">
-    <h2>Come see Vaughan </h2>
     <h2>Convenienty located at the corner of Nolensville and Harding Place</h2>
     <h3>Easily accessible in the old Kmart parking lot behind Hardee's</h3>
+    <h2>Monday - Friday </h2>
+    <h2>10am - 6pm</h2>
+    <h3>For the most up to date schedule, call or text 615.818.6656 </h3>
   </div>
   <div class="row">
-    <h2>Monday - Saturday </h2>
-    <h2>11am - 3pm</h2>
-    <h3>For the most up to date schedule, call or text 615.818.6656 </h3>
+    <h2>Catering</h2>
+    <h3>Available with 1 day of advanced notice</h3>
+    <h4>Back Yard Bar B Q's * Wedding Receptions</h4>
+    <h4>Business Dinners & Lunches</h4>
+    <h4>Family Reunions * Church Gatherings</h4>
   </div>
 </div>
