--- a/app/views/home.jade
+++ b/app/views/home.jade
@@ -2,20 +2,21 @@
   #home-div-main.row
     h2 Up and Go BBQ
     h3 313 is 220
+    h3 Bringing Northern Cooking to the South
   .row.home-info
-    .col-xs-6.home-left
+    .col-md-6.home-left
       img.img-rounded.img-responsive(src="images/vaughan_with_grill.jpg" alt='Vaughan with Grill' width='400' height='300')
-    .col-xs-6
+    .col-md-6
       h1 Vaughan cooks it up...
   .row.home-info
-    .col-xs-6.home-right
+    .col-md-6.home-right
       h1 over an open flame...
-    .col-xs-6
+    .col-md-6
       img.img-rounded.img-responsive(src="images/open_fire.jpg" alt='Open Fire' width='400' height='300')
   .row.home-info
-    .col-xs-6.home-left
+    .col-md-6.home-left
       img.img-rounded.img-responsive(src="images/happy_customers.jpg" alt='Happy Customers' width='400' height='300')
-    .col-xs-6
+    .col-md-6
       h1 and serves it up fresh for you!
 
   
