--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -16,25 +16,25 @@
           <div class="form-group">
             <label control-label class="col-sm-2">Name</label>
             <div class="col-sm-9">
-              <input id="name" placeholder="bob smith" type="test" name="name" class="form-control">
+              <input id="name" placeholder="your name" type="test" name="name" class="form-control">
             </div>
           </div>
           <div class="form-group">
             <label control-label class="col-sm-2">Email</label>
             <div class="col-sm-9">
-              <input id="email" placeholder="bob@aol.com" type="email" name="email" class="form-control">
+              <input id="email" placeholder="bob@ilovebbq.com" type="email" name="email" class="form-control">
             </div>
           </div>
           <div class="form-group">
             <label control-label class="col-sm-2">Phone</label>
             <div class="col-sm-9">
-              <input id="phone" placeholder="867.5309" name="phone" class="form-control">
+              <input id="phone" placeholder="your number" name="phone" class="form-control">
             </div>
           </div>
           <div class="form-group">
             <label control-label class="col-sm-2">Message</label>
             <div class="col-sm-9">
-              <textarea id="message" placeholder="send me some awesomeness" name="message" class="form-control"></textarea>
+              <textarea id="message" placeholder="Talk to me. Tell me what you think..." name="message" class="form-control"></textarea>
             </div>
           </div>
           <div class="form-group">
