--- a/public/views/home.html
+++ b/public/views/home.html
@@ -3,22 +3,23 @@
   <div id="home-div-main" class="row">
     <h2>Up and Go BBQ</h2>
     <h3>313 is 220</h3>
+    <h3>Bringing Northern Cooking to the South</h3>
   </div>
   <div class="row home-info">
-    <div class="col-xs-6 home-left"><img src="images/vaughan_with_grill.jpg" alt="Vaughan with Grill" width="400" height="300" class="img-rounded img-responsive"></div>
-    <div class="col-xs-6">
+    <div class="col-md-6 home-left"><img src="images/vaughan_with_grill.jpg" alt="Vaughan with Grill" width="400" height="300" class="img-rounded img-responsive"></div>
+    <div class="col-md-6">
       <h1>Vaughan cooks it up...</h1>
     </div>
   </div>
   <div class="row home-info">
-    <div class="col-xs-6 home-right">
+    <div class="col-md-6 home-right">
       <h1>over an open flame...</h1>
     </div>
-    <div class="col-xs-6"><img src="images/open_fire.jpg" alt="Open Fire" width="400" height="300" class="img-rounded img-responsive"></div>
+    <div class="col-md-6"><img src="images/open_fire.jpg" alt="Open Fire" width="400" height="300" class="img-rounded img-responsive"></div>
   </div>
   <div class="row home-info">
-    <div class="col-xs-6 home-left"><img src="images/happy_customers.jpg" alt="Happy Customers" width="400" height="300" class="img-rounded img-responsive"></div>
-    <div class="col-xs-6">
+    <div class="col-md-6 home-left"><img src="images/happy_customers.jpg" alt="Happy Customers" width="400" height="300" class="img-rounded img-responsive"></div>
+    <div class="col-md-6">
       <h1>and serves it up fresh for you!</h1>
     </div>
   </div>
