removing contact form and replacing with catering info, too many issues logging in to email, he doesn't seem to use it anyway

--- a/app/index.scss
+++ b/app/index.scss
@@ -68,6 +68,8 @@
 #contact-view {
   padding-top: 70px;
   text-align: center;
+  font-family: 'Russo One', sans-serif;
+
 
   #contact-div-main {
     img {
