--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -11,36 +11,11 @@
         <h3><i class="fa fa-envelope-o">&nbsp; upandgobbq@outlook.com</i></h3>
       </div>
       <div class="row">
-        <form>
-          <h1>Send Vaughan a Message</h1>
-          <div class="form-group">
-            <label control-label class="col-sm-2">Name</label>
-            <div class="col-sm-9">
-              <input id="name" placeholder="your name" type="test" name="name" class="form-control">
-            </div>
-          </div>
-          <div class="form-group">
-            <label control-label class="col-sm-2">Email</label>
-            <div class="col-sm-9">
-              <input id="email" placeholder="bob@ilovebbq.com" type="email" name="email" class="form-control">
-            </div>
-          </div>
-          <div class="form-group">
-            <label control-label class="col-sm-2">Phone</label>
-            <div class="col-sm-9">
-              <input id="phone" placeholder="your number" name="phone" class="form-control">
-            </div>
-          </div>
-          <div class="form-group">
-            <label control-label class="col-sm-2">Message</label>
-            <div class="col-sm-9">
-              <textarea id="message" placeholder="Talk to me. Tell me what you think..." name="message" class="form-control"></textarea>
-            </div>
-          </div>
-          <div class="form-group">
-            <button class="btn btn-success">Submit</button>
-          </div>
-        </form>
+        <h1>Catering</h1>
+        <h2>Available with 1 day of advanced notice</h2>
+        <h3>Back Yard Bar B Q's * Wedding Receptions</h3>
+        <h3>Business Dinners & Lunches</h3>
+        <h3>Family Reunions * Church Gatherings</h3>
       </div>
     </div>
   </div>
