--- a/app/views/contact.jade
+++ b/app/views/contact.jade
@@ -10,23 +10,29 @@
         h3: i.fa.fa-instagram &nbsp; instagram
         h3: i.fa.fa-envelope-o &nbsp; upandgobbq@outlook.com
       .row
-        form
-          h1 Send Vaughan a Message
-          .form-group
-            label.col-sm-2(control-label) Name
-            .col-sm-9
-              input#name.form-control(placeholder='your name' type='test' name='name')
-          .form-group
-            label.col-sm-2(control-label) Email
-            .col-sm-9
-              input#email.form-control(placeholder='bob@ilovebbq.com' type='email' name='email')
-          .form-group
-            label.col-sm-2(control-label) Phone
-            .col-sm-9
-              input#phone.form-control(placeholder="your number" name='phone')  
-          .form-group
-            label.col-sm-2(control-label) Message
-            .col-sm-9
-              textarea#message.form-control(placeholder="Talk to me. Tell me what you think..." name='message')
-          .form-group
-            button.btn.btn-success Submit
+        h1 Catering
+        h2 Available with 1 day of advanced notice
+        h3 Back Yard Bar B Q's * Wedding Receptions
+        h3 Business Dinners & Lunches
+        h3 Family Reunions * Church Gatherings
+
+        //- form
+        //-   h1 Send Vaughan a Message
+        //-   .form-group
+        //-     label.col-sm-2(control-label) Name
+        //-     .col-sm-9
+        //-       input#name.form-control(placeholder='your name' type='test' name='name')
+        //-   .form-group
+        //-     label.col-sm-2(control-label) Email
+        //-     .col-sm-9
+        //-       input#email.form-control(placeholder='bob@ilovebbq.com' type='email' name='email')
+        //-   .form-group
+        //-     label.col-sm-2(control-label) Phone
+        //-     .col-sm-9
+        //-       input#phone.form-control(placeholder="your number" name='phone')  
+        //-   .form-group
+        //-     label.col-sm-2(control-label) Message
+        //-     .col-sm-9
+        //-       textarea#message.form-control(placeholder="Talk to me. Tell me what you think..." name='message')
+        //-   .form-group
+        //-     button.btn.btn-success Submit
