--- a/app/views/contact.jade
+++ b/app/views/contact.jade
@@ -1,7 +1,7 @@
 #contact-view.container-fluid
   #contact-div-main.row
     .col-md-6
-      img.img-rounded(src="images/vaughan_with_sign.jpg" alt='Vaughan with Sign')
+      img.img-rounded(src="images/vaughan_with_sign.jpg" alt='Vaughan with Sign' data-toggle='modal' data-target='#vaughanModal')
     .col-md-6
       .row
         h2: i.fa.fa-mobile &nbsp; 615.818.6656
@@ -15,6 +15,14 @@
         h3 Back Yard Bar B Q's * Wedding Receptions
         h3 Business Dinners & Lunches
         h3 Family Reunions * Church Gatherings
+        
+#vaughanModal.modal(tabindex='-1' role='dialog' aria-hidden='true' aria-labelledby='vaughanModalLabel')
+  .modal-dialog.modal-lg
+    .modal-content
+      .modal-body
+        button(type='button' class='close' data-dismiss='modal' aria-label='Close'): span(aria-hidden='true')&times;
+        img(src="images/vaughan_with_sign.jpg" alt='Vaughan with Sign' height=700 width=850)
+
 
         //- form
         //-   h1 Send Vaughan a Message
