--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -1,7 +1,7 @@
 
 <div id="contact-view" class="container-fluid">
   <div id="contact-div-main" class="row">
-    <div class="col-md-6"><img src="images/vaughan_with_sign.jpg" alt="Vaughan with Sign" class="img-rounded"></div>
+    <div class="col-md-6"><img src="images/vaughan_with_sign.jpg" alt="Vaughan with Sign" data-toggle="modal" data-target="#vaughanModal" class="img-rounded"></div>
     <div class="col-md-6">
       <div class="row">
         <h2><i class="fa fa-mobile">&nbsp; 615.818.6656</i></h2>
@@ -16,6 +16,15 @@
         <h3>Back Yard Bar B Q's * Wedding Receptions</h3>
         <h3>Business Dinners & Lunches</h3>
         <h3>Family Reunions * Church Gatherings</h3>
+      </div>
+    </div>
+  </div>
+</div>
+<div id="vaughanModal" tabindex="-1" role="dialog" aria-hidden="true" aria-labelledby="vaughanModalLabel" class="modal">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">&times;</span></button><img src="images/vaughan_with_sign.jpg" alt="Vaughan with Sign" height="700" width="850">
       </div>
     </div>
   </div>
